--- a/style.css
+++ b/style.css
@@ -147,5 +147,5 @@ footer {
     display: none !important;
 }
 
-/* Remove a barra azul que o Google coloca no topo */
+/* Remove a barra azul que o Google coloca no topo teste */
 .goog-te-banner-frame.skiptranslate { display: none !important; }
